Criando slider de quantidade

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div style="width: 25em;
       border-bottom: transparent;
-      margin-top: -1px; color: black; background-color: black;" class="input-field left">
+      margin-top: -1px; background-color: white;" class="input-field left">
         <input id="search" type="search" required placeholder="Digite o que procura :)">
         <i class="material-icons" onclick="removeTextoPesquisa()">close</i>
       </div>
